<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:background="#2196F3"
        android:stretchColumns="2">

        <TextView
            android:id="@+id/place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="8dp"
            android:text="@string/location"
            android:textColor="#FFFFFF"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/place"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/ic_temperature"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/ic_celcius"
            android:text="@string/temperature"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />

        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_margin="8dp"
            android:background="@drawable/button_bg"
            android:text="@string/button_refresh"
            android:textColor="#FFFFFF"
            android:textSize="15dp"
            />

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_thunderstorm_large" />

        <TextView
            android:id="@+id/humid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weather_icon"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/ic_humidity"
            android:drawablePadding="5dp"
            android:text="@string/humidity"
            android:textColor="#FFFFFF"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weather_icon"
            android:layout_margin="5dp"
            android:layout_toLeftOf="@id/humid"
            android:drawableLeft="@drawable/ic_wind"
            android:drawablePadding="5dp"
            android:text="@string/wind_speed"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weather_icon"
            android:layout_margin="5dp"
            android:layout_toRightOf="@id/humid"
            android:drawableLeft="@drawable/ic_cloudiness"
            android:drawablePadding="5dp"
            android:text="@string/cloudiness"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:text="@string/credit"
            android:textColor="#FFFFFF"
            android:textSize="15dp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>